[package]
name = "food2fuel-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls","postgres"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
